2003-06-14 Harald Fernengel <harry@kdevelop.org>
    * Added perforce to the main menu, also uses KActions now so you can
      assign your favourite keybinding to the commands.

2003-06-14 Hamish Rodda <rodda@kde.org>
    * Warn if another process is running on execution and allow a restart.
    * Make automake deal with METASOURCES=AUTO
    * Remember position in document for compile warning/errors so that you can
      edit the document and still be taken to the correct location 
      (work in progress, commented out, requires up-to-date katepart)
    * Separate highlighting for errors and warnings (work in progress)

2003-06-12 Alexander Dymo <cloudtemple@mksat.net>
    * Trollproject:
      - Existing files could be added to a project with a relative path or
        they could be symlinked instead of just copying
      - Implemented removing files from IMAGES and IDLS groups
      - Set run environment variables and program arguments when launching
        the executable (thanks to Mario Scalas for the patch)
      - Correct "Link convenience library inside project" functionality (thanks to
        Mario Scalas for the patch)

2003-06-11 Hamish Rodda <rodda@kde.org>
    * Implemented "Debug in KDevelop" hook into drkonqi (the KDE crash
      handler). Press the button and kdevelop attaches to the process
      and brings up the frame stack, as long as the binary name of the
      process is the same as your binary.  Requires an update to
      kdebase/drkonqi to work (runtime dependency).

2003-06-07 Mario Scalas <mario.scalas@libero.it>
	* Stepped back from using Pimpl in part design since it does only complicate code without any of its
	  advantages in this case
	* Added an option for adding the message for the commit operation to the master ChangeLog
	  (located in <projectDirectory>/ChangeLog): await for comments for further changes.
	* CommitDlg now uses QTextEdit instead of (deprecated) QMultiLineEdit
	* This log was written using the CvsPart! :)
