@@ -6,7 +6,6 @@ KDE_NEED_FLEX
 KDEV_CHECK_DOCBASE
 KDEV_CHECK_SCRIPTING
 KDEV_CHECK_JAVA
-KDEV_CHECK_SVN
 KDEV_CHECK_QEDITOR
 KDEV_CHECK_COMPAT
 KDEV_CHECK_BDB
